--- a/app/templates/src/index.less
+++ b/app/templates/src/index.less
@@ -1,10 +1,11 @@
 // Should only contain global styles
 @import (less) "~normalize.css/normalize.css";
 
-// Fix box sizing
+// Standardize box sizing
 html {
   box-sizing: border-box;
 }
+
 *, *:before, *:after {
   box-sizing: inherit;
 }
